k8s/20-catalog-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog-service
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: catalog-service
  template:
    metadata:
      labels:
        app: catalog-service
    spec:
      containers:
        - name: catalog-service
          image: ticketing/catalog-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
          startupProbe:
            httpGet: { path: /actuator/health, port: 8081 }
            timeoutSeconds: 5
            failureThreshold: 60
            periodSeconds: 5
          readinessProbe:
            httpGet: { path: /actuator/health, port: 8081 }
            timeoutSeconds: 5
            periodSeconds: 15
          livenessProbe:
            httpGet: { path: /actuator/health, port: 8081 }
            timeoutSeconds: 5
            periodSeconds: 20
          resources:
            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              cpu: 750m
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: catalog-service
spec:
  selector:
    app: catalog-service
  ports:
    - port: 8081
      targetPort: 8081
