k8s/21-inventory-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-service
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: inventory-service
  template:
    metadata:
      labels:
        app: inventory-service
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8082"
        prometheus.io/path: "/actuator/prometheus"
    spec:
      containers:
        - name: inventory-service
          image: ticketing/inventory-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8082
          startupProbe:
            httpGet: { path: /actuator/health, port: 8082 }
            timeoutSeconds: 5
            failureThreshold: 60
            periodSeconds: 5
          readinessProbe:
            httpGet: { path: /actuator/health, port: 8082 }
            timeoutSeconds: 5
            periodSeconds: 15
          livenessProbe:
            httpGet: { path: /actuator/health, port: 8082 }
            timeoutSeconds: 5
            periodSeconds: 20
          resources:
            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              cpu: 750m
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: inventory-service
spec:
  selector:
    app: inventory-service
  ports:
    - port: 8082
      targetPort: 8082
