k8s/22-booking-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-service
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: booking-service
  template:
    metadata:
      labels:
        app: booking-service
    spec:
      containers:
        - name: booking-service
          image: ticketing/booking-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8083
          startupProbe:
            httpGet: { path: /actuator/health, port: 8083 }
            timeoutSeconds: 5
            failureThreshold: 65
            periodSeconds: 5
          readinessProbe:
            httpGet: { path: /actuator/health, port: 8083 }
            timeoutSeconds: 5
            periodSeconds: 15
          livenessProbe:
            httpGet: { path: /actuator/health, port: 8083 }
            timeoutSeconds: 5
            periodSeconds: 20
          resources:
            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              cpu: 750m
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: booking-service
spec:
  selector:
    app: booking-service
  ports:
    - port: 8083
      targetPort: 8083
