k8s/23-auth-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8085"
        prometheus.io/path: "/actuator/prometheus"
    spec:
      containers:
        - name: auth-service
          image: ticketing/auth-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8085
          startupProbe:
            httpGet: { path: /actuator/health, port: 8085 }
            timeoutSeconds: 5
            failureThreshold: 60
            periodSeconds: 5
          readinessProbe:
            httpGet: { path: /actuator/health, port: 8085 }
            timeoutSeconds: 5
            periodSeconds: 15
          livenessProbe:
            httpGet: { path: /actuator/health, port: 8085 }
            timeoutSeconds: 5
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 192Mi
            limits:
              cpu: 600m
              memory: 384Mi
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  selector:
    app: auth-service
  ports:
    - port: 8085
      targetPort: 8085
