k8s/24-payment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: payment-service
  template:
    metadata:
      labels:
        app: payment-service
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8086"
        prometheus.io/path: "/actuator/prometheus"
    spec:
      containers:
        - name: payment-service
          image: ticketing/payment-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8086
          startupProbe:
            httpGet: { path: /actuator/health, port: 8086 }
            timeoutSeconds: 5
            failureThreshold: 60
            periodSeconds: 5
          readinessProbe:
            httpGet: { path: /actuator/health, port: 8086 }
            timeoutSeconds: 5
            periodSeconds: 15
          livenessProbe:
            httpGet: { path: /actuator/health, port: 8086 }
            timeoutSeconds: 5
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 192Mi
            limits:
              cpu: 600m
              memory: 384Mi
---
apiVersion: v1
kind: Service
metadata:
  name: payment-service
spec:
  selector:
    app: payment-service
  ports:
    - port: 8086
      targetPort: 8086
