k8s/25-notification-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
        - name: notification-service
          image: ticketing/notification-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8084
          startupProbe:
            httpGet: { path: /actuator/health, port: 8084 }
            timeoutSeconds: 5
            failureThreshold: 60
            periodSeconds: 5
          readinessProbe:
            httpGet: { path: /actuator/health, port: 8084 }
            timeoutSeconds: 5
            periodSeconds: 15
          livenessProbe:
            httpGet: { path: /actuator/health, port: 8084 }
            timeoutSeconds: 5
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 600m
              memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
spec:
  selector:
    app: notification-service
  ports:
    - port: 8084
      targetPort: 8084
