k8s/40-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ticketing-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: catalog.ticketing.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: catalog-service
                port:
                  number: 8081
    - host: inventory.ticketing.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: inventory-service
                port:
                  number: 8082
    - host: booking.ticketing.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: booking-service
                port:
                  number: 8083
    - host: auth.ticketing.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 8085
    - host: payment.ticketing.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: payment-service
                port:
                  number: 8086
    - host: notification.ticketing.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: notification-service
                port:
                  number: 8084
